# mips-egui-sim

./: Cargo.toml  README.md
.zed/: settings.json
examples/: hello_bytes.asm  hello_hex.asm  hello_world.asm  number_input.asm  time_unix.asm
src/: address.rs  args.rs  assembler.rs  cli.rs  cpu.rs  instructions.rs  lexer.rs  main.rs  registers.rs  simulator.rs
src/gui/: app.rs
src/sim/: assembler.rs  cpu.rs  mod.rs  tokenizer.rs
